# futureproofdscapstone

./: Dockerfile  MCP_SETUP.md  README.MD  context-primer.md  docker-compose.yml  pyproject.toml  requirements.txt  test_setup.py  tools.yaml.example
capstone-slackbot/: .env.example  .gitignore  AGENTS.md  AI_SECURITY.md  ARCHITECTURE.md  CONFIG_FILES.md  DOCKER_SETUP.md  Dockerfile  ENV_SETUP.md  HELP.md  MCP_SETUP.md  POETRY_SETUP.md  PROJECT_CONTEXT.md  README.md  SLACK_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  tools.yaml.example
capstone-slackbot/agent/: pandasai_agent.py
capstone-slackbot/capstone_slackbot/: __init__.py  main.py
capstone-slackbot/capstone_slackbot/agent/: __init__.py  pandasai_agent.py
capstone-slackbot/capstone_slackbot/mcp_server/: server.py
capstone-slackbot/capstone_slackbot/mcp_server/tools/: db_query.py  guardrails.py  slack.py
capstone-slackbot/capstone_slackbot/slack_bot/: __init__.py  handler.py  mock_slack.py
capstone-slackbot/mcp_server/: __init__.py  server.py
capstone-slackbot/mcp_server/tools/: db_query.py  guardrails.py  mcp_database.py  mock_database.py  slack.py
capstone-slackbot/semantic_model/: guardrails.yaml  schema.yaml
capstone-slackbot/slack_bot/: handler.py
capstone-slackbot/tests/: __init__.py  test_guardrails.py  test_handler_agent.py  test_setup.py  test_slack_integration.py  test_slack_standalone.py
